# GPAPI-MCP_Redser

./: DEBUGGING_SUMMARY.md  README.md  debug_curl.py  gpapi-README.md  list_merchants.py  pyproject.toml  send_pizza_payment.py  test_operations.py  test_tokens.py  test_transactions.py
.github/: copilot-instructions.md
src/: main.py  tools.py
src/auth/: __init__.py  token_manager.py
src/capabilities/: __init__.py  authentication.py  base.py  disputes.py  links.py  risk.py  settlements.py  tokens.py  transactions.py
src/mcp_gpapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/models/: __init__.py  dispute.py  settlement.py  token.py  transaction.py
tests/: test_capabilities.py
